docs-archive/apache-airflow-providers-cohere/1.5.0/_sources/_api/airflow/providers/cohere/hooks/cohere/index.rst.txt
airflow.providers.cohere.hooks.cohere
=====================================

.. py:module:: airflow.providers.cohere.hooks.cohere


Attributes
----------

.. autoapisummary::

   airflow.providers.cohere.hooks.cohere.logger


Classes
-------

.. autoapisummary::

   airflow.providers.cohere.hooks.cohere.CohereHook


Module Contents
---------------

.. py:data:: logger

.. py:class:: CohereHook(conn_id = default_conn_name, timeout = None, max_retries = None, request_options = None)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Use Cohere Python SDK to interact with Cohere platform using API v2.

   .. seealso:: https://docs.cohere.com/docs

   :param conn_id: :ref:`Cohere connection id <howto/connection:cohere>`
   :param timeout: Request timeout in seconds. Optional.
   :param max_retries: Maximal number of retries for requests. Deprecated, use request_options instead. Optional.
   :param request_options: Dictionary for function-specific request configuration. Optional.


   .. py:attribute:: conn_name_attr
      :value: 'conn_id'



   .. py:attribute:: default_conn_name
      :value: 'cohere_default'



   .. py:attribute:: conn_type
      :value: 'cohere'



   .. py:attribute:: hook_name
      :value: 'Cohere'



   .. py:attribute:: conn_id
      :value: 'cohere_default'



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: max_retries
      :value: None



   .. py:attribute:: request_options
      :value: None



   .. py:method:: get_conn()

      Return a new or cached Cohere client instance.



   .. py:method:: create_embeddings(texts, model = 'embed-multilingual-v3.0')


   .. py:method:: get_ui_field_behaviour()
      :classmethod:



   .. py:method:: test_connection(model = 'command-r-plus-08-2024', messages = None)


